<resources>
    <string name="app_name">Mobile App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="loginhere">Already Have an account? <u>Login</u></string>
    <string name="signuphere">Create new account? <u>Sign up here</u>.</string>
    <string name="congrats_daggy">Congrats Daggy!</string>
    <string name="error_data">Error Data</string>
    <string name="name">name</string>
    <string name="error_name">error name</string>
    <string name="error_description">error description</string>
    <string name="capture">Capture</string>
    <string name="upload">upload</string>
    <string name="submit">Submit</string>
    <string name="cancel_upload"><u>Cancel Upload</u></string>
    <string name="this_is_the_title_of_our_video">This is the title of our video</string>
    <string name="mystreamer">MyStreamer</string>
    <string name="_10k_views">10K Views</string>
    <string name="_4_days_ago">4 Days Ago</string>
    <string name="this_is_the_title">This is the title</string>
    <string name="video_description">Video Description</string>
    <string name="dashboard">Dashboard</string>
    <string name="staff_management">Staff Management</string>
    <string name="customer_management">Customer Management</string>
    <string name="project_management">Project Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="reach_us">Reach Us</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="reach_us_">Reach us:</string>
    <string name="mail_daghlaskaire58_gmail_com">Mail: daghlaskaire58@gmail.com</string>
    <string name="mobile_0723325631">Mobile: 0723325631</string>
    <string name="good_day">Good Day!</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
</resources>