<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/btn_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:showAsAction="ifRoom"
            app:actionViewClass="androidx.appcompat.widget.SearchView"/>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/menu_refresh"
            android:title="@string/refresh"/>
        <item
            android:id="@+id/menu_reach"
            android:title="@string/reach_us"/>
        <item
            android:id="@+id/menu_help"
            android:title="@string/help"/>
    </group>

</menu>